# ask_before_you_act

./: .gitignore  README.md  alt_config.yaml  ask_before_you_act.pkl  baseline_config.yaml  config.yaml  config_main.yaml  config_rm.yaml  demo.ipynb  film_config.yaml  hyperparam_config.txt  lang.py  main_config.yaml  minigrid-baseline-Copy1.ipynb  minigrid-baseline-QA-scratch.ipynb  minigrid-baseline-QA-test.ipynb  minigrid-baseline-QA.ipynb  minigrid-baseline.ipynb  minigrid_experiment.py  minigrid_experimentRM.py  minigrid_experiment_JL.py  minigrid_experiment_sweeps.py  minigrid_train.py  minigrid_train_baseline.py  minigrid_train_qa.py  no_embed_config.yaml  oracle.py  oracle_demo.ipynb  pretrain_lstm.py  pyproject.toml  q_bot_config.yaml  requirements.txt  run_experiments.py  run_sweeps.py  run_sweeps_JL.py  run_sweeps_rm.py  run_sweeps_sm.py  run_sweeps_sm_curr.py  sweep.py  tables.py  (+3 more)
.ipynb_checkpoints/: test_env-checkpoint.ipynb
agents/: Agent.py  AgentMem.py  AgentOLD.py  AgentRM.py  BaselineAgent.py  BaselineAgentOLD.py  BaselineAgentRM.py  BrainAgent.py  MainAgent.py  PPOAgent.py
csv/: baseline_train_ans_true.csv  film_train_ans_random.csv  main_em_non_random_train_1.csv  main_em_random_test_1.csv  process_results.ipynb
data/: baseline_train_ans_true.npy  film_train_ans_random.npy  film_train_ans_true.npy  main_em_non_random_test.npy  main_em_non_random_test_.npy  main_em_non_random_train_.npy  main_em_random_test_.npy  main_em_random_train_.npy  main_embed_ans_true.npy  main_train_ans_true.npy  plotting.py  run_results_Thu Apr 29 13:14:39 2021.p  (+7 more)
(+96 files in other folders)
