[tool.poetry]
name = "oracle"
version = "0.1.0"
description = ""
authors = ["serg-e <smosesov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nangram = "^0.0.6"
lark = "^0.11.1"
torch = "^1.8.0"
gym-minigrid = "^1.0.2"
matplotlib = "^3.3.4"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]
jedi = "^0.18.0"
pynvim = "^0.4.3"
black = "^20.8b1"
flake8 = "^3.9.0"
ptpython = "^3.0.16"
ipython = "^7.21.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
